--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,10 @@ target 'DemoBishes' do
 
   use_react_native!(
     :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    # By default, Hermes is disabled on Old Architecture, and enabled on New Architecture.
+    # You can enable/disable it manually by replacing `flags[:hermes_enabled]` with `true` or `false`.
+    :hermes_enabled => false,
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
