--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.16",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-redux": "^9.1.0",
+    "reactotron-react-native": "^5.1.3",
+    "reactotron-react-query": "^1.0.2",
+    "reactotron-redux": "^3.1.9",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
