--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "android:clean-build-cache": "cd android && ./gradlew cleanBuildCache && cd ..",
+    "android:clean": "cd android && ./gradlew clean && cd ..",
+    "watchman:del-all": "watchman watch-del-all",
+    "cache-clean-all": "rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/.cache/* && yarn cache clean "
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.16",
@@ -15,7 +19,7 @@
     "axios": "^1.6.7",
     "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "0.73.6",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
