--- a/ios/DemoBishes.xcodeproj/xcshareddata/xcschemes/DemoBishesDev.xcscheme
+++ b/ios/DemoBishes.xcodeproj/xcshareddata/xcschemes/DemoBishesDev.xcscheme
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1530"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;# Added by Bishes 8 Apr 24&#10;echo &quot;.env.development&quot; &gt; /tmp/envfile&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "2CA973AE2BC3F82D008AFFA4"
+                     BuildableName = "DemoBishesDev.app"
+                     BlueprintName = "DemoBishesDev"
+                     ReferencedContainer = "container:DemoBishes.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,9 +33,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "DemoBishes.app"
-               BlueprintName = "DemoBishes"
+               BlueprintIdentifier = "2CA973AE2BC3F82D008AFFA4"
+               BuildableName = "DemoBishesDev.app"
+               BlueprintName = "DemoBishesDev"
                ReferencedContainer = "container:DemoBishes.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,19 +45,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "DemoBishesTests.xctest"
-               BlueprintName = "DemoBishesTests"
-               ReferencedContainer = "container:DemoBishes.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -54,15 +62,15 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DemoBishes.app"
-            BlueprintName = "DemoBishes"
+            BlueprintIdentifier = "2CA973AE2BC3F82D008AFFA4"
+            BuildableName = "DemoBishesDev.app"
+            BlueprintName = "DemoBishesDev"
             ReferencedContainer = "container:DemoBishes.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -71,9 +79,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DemoBishes.app"
-            BlueprintName = "DemoBishes"
+            BlueprintIdentifier = "2CA973AE2BC3F82D008AFFA4"
+            BuildableName = "DemoBishesDev.app"
+            BlueprintName = "DemoBishesDev"
             ReferencedContainer = "container:DemoBishes.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -82,7 +90,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
