--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,14 +18,17 @@ prepare_react_native_project!
 #     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
 # ```
 flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
-
+pod 'react-native-config/Extension', :path => '../node_modules/react-native-config'
+pod 'react-native-config', :path => '../node_modules/react-native-config'
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'DemoBishes' do
+# target 'DemoBishes' do
+# Added by Bishes 8 Apr 24
+abstract_target 'DemoBishesCommonPods' do
   config = use_native_modules!
 
   use_react_native!(
@@ -42,6 +45,14 @@ target 'DemoBishes' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+  target 'DemoBishesDev' do
+  end
+ 
+  target 'DemoBishesStage' do
+  end
+ 
+  target 'DemoBishes' do
+  end
 
   target 'DemoBishesTests' do
     inherit! :complete
