--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
+    "setDevelopment": "ENVFILE=.env.development",
+    "setStaging": "ENVFILE=.env.staging",
+    "setProduction": "ENVFILE=.env.production",
     "android:clean-build-cache": "cd android && ./gradlew cleanBuildCache && cd ..",
     "android:clean": "cd android && ./gradlew clean && cd ..",
     "watchman:del-all": "watchman watch-del-all",
-    "cache-clean-all": "rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/.cache/* && yarn cache clean "
+    "cache-clean-all": "rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/.cache/* && yarn cache clean",
+    "android:staging": "react-native run-android --mode=stagingdebug",
+    "android:staging-release": "react-native run-android --mode=stagingrelease",
+    "android:dev": "react-native run-android --mode=developmentdebug",
+    "android:dev-release": "react-native run-android --mode=developmentrelease",
+    "android:prod": "react-native run-android --mode=productiondebug",
+    "android:prod-release": "react-native run-android --mode=productionrelease"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.16",
@@ -20,13 +29,11 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-config": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-redux": "^9.1.0",
-    "reactotron-react-native": "^5.1.3",
-    "reactotron-react-query": "^1.0.2",
-    "reactotron-redux": "^3.1.9",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "yarn": "^1.22.22"
@@ -46,6 +53,10 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "reactotron-core-client": "^2.8.13",
+    "reactotron-react-native": "^5.1.6",
+    "reactotron-react-query": "^1.0.2",
+    "reactotron-redux": "^3.1.9",
     "typescript": "5.0.4"
   },
   "engines": {
